<resources>
    <string name="app_name">Keep</string>
    <string name="helper_text">*Required</string>
    <string name="Login">Login</string>
    <string name="Sign_Up">Sign up</string>
    <string name="Sign_Out">Sign out</string>
    <string name="Jump">Jump to Room</string>
    <string name="Navigation">Jump to Navigation</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Sign_up"><u>Don\'t have an account, sign up here</u></string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="emailAddress">Email Address</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="weather_api_key">80273ca2896861a72eca02c8f231e796</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiamVycnkzMjA0MzAzMSIsImEiOiJjbDMxMmRzaGMxdmkwM2xtdWF1MDB4Nm02In0.92UEBCBSvVNXdr86JAXWFw</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">667423597654187</string>
    <string name="facebook_client_token">f67d203a1ca8ca87b00f24b6bcb7294f</string>
</resources>